# cmost

./: .gitignore  LDA.eps  MANIFEST.in  Makefile  PCA.eps  READMD.MD  READMD.md  README.md  main.py  pyproject.toml  qyj_readme.md  readme.md  report.html  requirements.txt
cmost_gui/: MANIFEST.in  Makefile  combine.py  download.py  lick.py  main.py  pyproject.toml  reader.py  utils.py
cmost_gui/assets/: example_obsid.txt
cmost_gui/src/cmost_gui/: download.py  index.py  reader.py  utils.py
src/: MANIFEST.in  pyproject.toml
src/Cmost/: LlIndices.py  __construct.py  __download.py  __fits_data.py  __init__.py  __io.py  construct.py  download.py  fitting.py  lick.py  mtypes.py  processing.py  utils.py
src/Cmost/__io/: __core.py  __init__.py  strategy.py
src/Cmost/fitting/: __init__.py  __statistics_window_fitting.py
src/Cmost/indices/: __LlIndices.py  __init__.py
src/Cmost/io/: __init__.py  core.py  strategy.py
src/cmost/: __download.py  __fits_data.py  download.py  fitting.py  io.py  lick.py  processing.py
tests/: test_download.py
