[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cmost_gui"
version = "0.1"
authors = [
    {name = "Yunyu Guo",email="guoyunyu2017@outlook.com"}
    ,{name = "Peng Tang",email="1941275544@qq.com"}]
description = "A gui extension for cmost"
license = "GPL-3.0-or-later"
license-files = ["LICENCE"]
readme = "readme.md"
requires-python = ">=3.9"

dependencies = [
  "cmost"
  ,"pandas"
  ,"streamlit"
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.scripts]
cmost = "cmost_gui.main:main"