[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Cmost"
version = "0.1"
authors = [
    {name = "Yunyu Guo",email="guoyunyu2017@outlook.com"}]
description = "A processing tool for FITS files related to LAMOST"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy"
    ,"pandas"
    ,"matplotlib"
    ,"astropy"
    ,"scipy>=1.14.0"
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
